(feat): Add views with merely title

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -8,7 +8,7 @@
 body {
   min-height: 100vh;
   color: white;
-  background: orange;
+  background: brown;
   line-height: 1.5;
   font-family: 'Noto Sans', sans-serif;
   font-size: 16px;
