--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -12,6 +12,7 @@ body {
   line-height: 1.5;
   font-family: 'Noto Sans', sans-serif;
   font-size: 16px;
+  margin: 0;
   position: relative;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
