--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap');
 *,
 *::before,
 *::after {
@@ -13,7 +14,7 @@ body {
   background: brown;
   color: white;
   display: block;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: Inter, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   margin: 0;
