--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 *,
 *::before,
 *::after {
@@ -16,6 +16,7 @@ body {
   display: block;
   font-family: Inter, sans-serif;
   font-size: 16px;
+  font-weight: 400;
   line-height: 1.5;
   margin: 0;
   min-height: 100vh;
