(feat): Main view - Interpolates the data to the boilerplate view

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -11,8 +11,8 @@ button {
   border: unset;
 }
 body {
-  background: brown;
-  color: white;
+  background: #ffffff;
+  color: #000000;
   display: block;
   font-family: Inter, sans-serif;
   font-size: calc(6px + 0.78vmax + 0.02vmin);
