--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@600..700&display=swap');
+
 *,
 *::before,
 *::after {
