(feat): TablePaginator.vue: Aggregated with table store - Affect Table.vue initialization and styles
(adjust): Table.vue: More aligned layout

(adjust): base.css: Prevent default font style on user-input elements

(remove): store/ping

(rename): router: views

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -12,6 +12,12 @@ button {
   background: unset;
   border: unset;
 }
+button, input, select {
+  padding: 0;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+}
 body {
   background: #ffffff;
   color: #000000;
