--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -12,7 +12,9 @@ button {
   background: unset;
   border: unset;
 }
-button, input, select {
+button,
+input,
+select {
   padding: 0;
   font-family: inherit;
   font-size: inherit;
