--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -8,6 +8,12 @@
   margin: 0;
   font-weight: 500;
 }
+a {
+  text-decoration: none;
+}
+a:hover {
+  color: initial;
+}
 button {
   background: unset;
   border: unset;
