(feat): LatestGameView.vue: Add YouTube iframe playlist - Being compatible with the home grid layout
(adjust): LatestGameView.vue: Organize function (getOrderPair)

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -41,6 +41,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
+iframe {
+  border: 0;
+}
 ::selection {
   background-color: #d9d9d9;
 }
